Update to NetBeans 26