@@ -46,8 +46,10 @@
                         <systemPropertyVariables>
                             <java.awt.headless>true</java.awt.headless>
                         </systemPropertyVariables>
-                        <argLine>--add-opens=java.base/java.net=ALL-UNNAMED
+                        <argLine>
+                            --add-opens=java.base/java.net=ALL-UNNAMED
                             --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+                            -Dpolyglot.engine.WarnInterpreterOnly=false
                         </argLine>
                     </configuration>
                 </plugin>
@@ -74,8 +76,8 @@
                             <configuration>
                                 <rules>
                                     <requireJavaVersion>
-                                        <version>[17,22)</version>
-                                        <message>The IGV Netbeans platform requires a JDK version between 17 and 22</message>
+                                        <version>[17,24)</version>
+                                        <message>The IGV Netbeans platform requires a JDK version between 17 and 24</message>
                                     </requireJavaVersion>
                                 </rules>
                             </configuration>
@@ -117,7 +119,7 @@
         <module>ViewerApi</module>
     </modules>
     <properties>
-        <netbeans.version>RELEASE220</netbeans.version>
+        <netbeans.version>RELEASE260</netbeans.version>
         <brandingToken>idealgraphvisualizer</brandingToken>
         <swinglayouts.version>1.0.2</swinglayouts.version>
         <nbmmvnplugin.version>4.8</nbmmvnplugin.version>
@@ -129,4 +131,42 @@
         <openpdf.version>1.3.29</openpdf.version>
         <wala.version>1.5.8</wala.version>
     </properties>
+    <profiles>
+        <profile>
+            <id>jdk-24-workarounds</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <version>${mvncompilerplugin.version}</version>
+                            <configuration>
+                                <!--JDK 24 requires explicitly enabled annotation processing but JDK 17 doesn't know the flag -->
+                                <compilerArgs>
+                                    <arg>-proc:full</arg>
+                                </compilerArgs>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.12.2</version>
+                            <configuration>
+                                <!-- Avoid potential problems with jargraal and importing jdk.graal.compiler.graphio -->
+                                <argLine>
+                                    -XX:-UseJVMCICompiler
+                                    -XX:-EnableJVMCI
+                                </argLine>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+            <activation>
+                <jdk>[24,)</jdk>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
 </project>
